# ionclaw

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  app.json  docker-compose.yml  render.yaml
.do/: deploy.template.yaml
.github/workflows/: build-all.yml  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
apps/flutter/plugin/: pubspec.yaml
apps/flutter/plugin/android/: build.gradle
apps/flutter/plugin/ios/: ionclaw.podspec  ionclaw.xcframework
apps/flutter/runner/: .gitignore  pubspec.yaml
apps/web/: index.html  package.json  vite.config.js
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.vue  main.js
cmake/: embed-resources.cmake  ios-framework-info.plist.in  llama-cpp-patch.cmake  llama-cpp-subdirectory.patch
cmake/cpm/: cpm-dependency.cmake  cpm-downloader.cmake
docs/: about.md  api.md  apple.md  architecture.md  build.md  configuration.md  custom-providers.md  deploy.md  docker.md  flow.md  flutter.md  image-generation.md  installation.md  llama.md  mcp.md  screenshots.md  skills.md  tools.md
extras/android/: upload-certificate.pem  upload-keystore.jks
flutter/plugin/: pubspec.yaml
flutter/plugin/android/: build.gradle  settings.gradle
flutter/plugin/lib/: ionclaw.dart
flutter/plugin/linux/: CMakeLists.txt
flutter/plugin/macos/: ionclaw.podspec  libionclaw.dylib
flutter/runner/: build.yaml  pubspec.yaml
flutter/runner/lib/: main.dart
main/: CMakeLists.txt
main/app/src/: main.cpp
main/lib/src/: ionclaw.cpp
main/resources/template/: .env.example  AGENTS.md  TOOLS.md  config.yml
(+313 files in other folders)
